# factorio-discord-bot

./: README.md  factorio-discord-bot.cabal  hie.yaml
cmd/factorio-discord-bot/: Main.hs
